kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-application-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: greeting-application
  type: ClusterIP
