kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeting-application-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: greeting-application-cluster-ip
          servicePort: 80
